# game_generator

./: .gitignore  CMakeLists.template  CMakeLists.txt  README.md  game.cpp  gen_cmakelists_linux.sh  gen_cmakelists_win64.ps1  generate.sh  genlinux.sh  genmacOS.sh  genwin32.ps1  install_sfml_linux.sh  install_sfml_win32.ps1  install_sfml_win64.ps1  main.cpp
generators/linux/: .gen_project.sh.swp  gen_project.sh
generators/macOS/: gen_project.sh
generators/windows/: gen_project.ps1  gen_project.sh  gen_project_64bit.ps1
installers/linux/: install_sfml.sh
installers/macOS/: install_sfml.sh
installers/windows/: .install_sfml.ps1.swp  install_sfml.ps1  install_sfml_64bit.ps1
source/: CMakeLists.template  build.sh  clean.sh  run.sh
